[project]
name = "wolnut"
description = "A lightweight service that monitors a NUT UPS and sends WOL packets to wake clients after a power outage."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.2",
    "wakeonlan>=3.1.0",
]
dynamic = ["version"]

[tool.hatch.version]
path = "wolnut/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "pytest>=8.4.1",
]
